# fake65c02

./: .clang-format-include  .clang-tidy  .clang_complete  .gitignore  .gitmodules  LICENSE  Makefile  fake65c02  fake65c02.c  fake65c02.code-workspace  fake65c02.h  fake65c02.lua  justfile  machine.lua  main.c  main.lua  meson.build  readme.md  rom.s
include/: fake6502.h  fake65c02.h  main.h  messaging.h
love2d_example/: .gitignore  main.lua
roms/: Makefile  hello_world.s  lib.s  meson.build  rom.s  test_65c02.s  watch.sh
roms/benches/: fibonacci.s
roms/c/: crt0.s  defines.s  fake65c02.cfg  macros.s  main.c  make_lib.sh  meson.build  readme.md  rom.c  test.s
roms/c/runtime/: itoa.s  write.s
roms/examples/: char_request.s  hello_world.s  meson.build
roms/tests/: hello_world.s  meson.build  rom.s  strings.s  test_65c02.s  test_65c02_strings.s  test_cmos.s  test_fail.s  test_hook.s  test_lib.s  test_stack.s  test_stp.s  test_str.s  test_wai.s  test_wai_interrupt.s  test_wai_nointerrupt.s  test_wdc.s
src/: fake65c02.c  main.c
